--- a/album.html
+++ b/album.html
@@ -23,34 +23,34 @@
         
         <div class="photo-container">
             <div class="photo-box">
-                <img src="https://i.pinimg.com/564x/de/f4/b5/def4b5b1a8e8af131d908d6b13deb913.jpg" alt="Foto Familiar 1">
+                <img src="media/img1.jpg" alt="Foto Familiar 1">
             </div>
             <div class="photo-box">
-                <img src="https://static.wikia.nocookie.net/fma/images/a/a4/EDOWADO-S.jpg/revision/latest?cb=20190508204433&path-prefix=es" alt="Foto Familiar 2">
+                <img src="media/img2.webp" alt="Foto Familiar 2">
             </div>
             <div class="photo-box">
-                <img src="https://www.mundodeportivo.com/alfabeta/hero/2024/08/este-cosplay-de-fullmetal-alchemist-le-da-vida-a-edward-y-alphonse-de-un-modo-increible.jpg?width=768&aspect_ratio=16:9&format=nowebp" alt="Foto Familiar 3">
+                <img src="media/img3.jpg" alt="Foto Familiar 3">
             </div>
             <div class="photo-box">
-                <img src="https://images7.alphacoders.com/977/977575.png" alt="Foto Familiar 4">
+                <img src="media/img4.png" alt="Foto Familiar 4">
             </div>
             <div class="photo-box">
-                <img src="https://lh5.googleusercontent.com/proxy/0aC3O2fXHlK1vzatE9_pGCrT0djtvd3btgrBaKeCBRuiHxciGyVCFOWRbb6JkwuoOTPktC3-igJZa3zGigF18RgfZyLN" alt="Foto Familiar 5">
+                <img src="media/img5.jpg" alt="Foto Familiar 5">
             </div>
             <div class="photo-box">
-                <img src="https://preview.redd.it/qmtv8c8v5fvb1.jpg?auto=webp&s=a3903e8bc6ae3938d0207bb5ffb79f017ad98760" alt="Foto Familiar 6">
+                <img src="media/img6.webp" alt="Foto Familiar 6">
             </div>
             <div class="photo-box">
-                <img src="https://pbs.twimg.com/media/EXmIrDbXQAEF5Vy.jpg:large" alt="Foto Familiar 7">
+                <img src="media/img7.jpg_large" alt="Foto Familiar 7">
             </div>
             <div class="photo-box">
-                <img src="https://images2.alphacoders.com/676/676224.jpg" alt="Foto Familiar 8">
+                <img src="media/img8.jpg" alt="Foto Familiar 8">
             </div>
             <div class="photo-box">
-                <img src="https://preview.redd.it/a8qlyhhj5k0b1.jpg?auto=webp&s=23e214bb7de8ca64cd32fd8c6ba474e11cbc1771" alt="Foto Familiar 9">
+                <img src="media/img9.webp" alt="Foto Familiar 9">
             </div>
             <div class="photo-box">
-                <img src="https://pa1.aminoapps.com/6995/3edefa5aa5059b016683b329a3d5ae5be38e62c6r1-500-280_hq.gif" alt="Foto Familiar 10">
+                <img src="media/img10.gif" alt="Foto Familiar 10">
             </div>
         </div>
     </section>
